--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -29,7 +29,7 @@
 
 @media (max-width: 768px) {
   .header {
-    padding: 1.5rem 0;
+    padding: 0.5rem 0;
   }
   
   .logo {
@@ -42,6 +42,10 @@
 }
 
 @media (max-width: 480px) {
+  .header {
+    padding: 0.5rem 0;
+  }
+  
   .logo {
     height: 75px;
   }
