--- a/src/components/SocialMedia.css
+++ b/src/components/SocialMedia.css
@@ -50,6 +50,18 @@
   width: 32px;
   height: 32px;
   object-fit: contain;
+  object-position: center;
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+  margin: 0 auto;
+}
+
+/* Asegurar que ambos iconos tengan el mismo tamaño visual */
+.social-button.facebook .social-icon,
+.social-button.instagram .social-icon {
+  width: 28px;
+  height: 28px;
 }
 
 
@@ -72,6 +84,12 @@
     width: 28px;
     height: 28px;
   }
+  
+  .social-button.facebook .social-icon,
+  .social-button.instagram .social-icon {
+    width: 28px;
+    height: 28px;
+  }
 }
 
 @media (max-width: 480px) {
@@ -90,7 +108,13 @@
   }
   
   .social-icon {
-    width: 24px;
-    height: 24px;
+    width: 28px;
+    height: 28px;
+  }
+  
+  .social-button.facebook .social-icon,
+  .social-button.instagram .social-icon {
+    width: 28px;
+    height: 28px;
   }
 }
